@@ -6,27 +6,31 @@ import javax.swing.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Stream;
 
 public class Main extends JFrame {
 
     @SneakyThrows
     public static void main(String[] args) {
-        List<Path> files = Files.walk(Path.of("/workspace/private/fitness-charts"))
-                .filter(Files::isRegularFile)
-                .filter(path -> path.getFileName().toString().endsWith(".csv"))
-                .toList();
+        try (Stream<Path> walk = Files.walk(Path.of("/workspace/private/fitness-charts"))) {
+            List<Path> files = walk
+                    .filter(Files::isRegularFile)
+                    .filter(path -> path.getFileName().toString().endsWith(".csv"))
+                    .toList();
 
 
-        if (args.length == 0) {
-            MultiLinesChart multiLinesChart = new MultiLinesChart(files.get(0));
-            multiLinesChart.saveChartAsPNG();
-        } else {
-
-            SwingUtilities.invokeLater(() -> {
-                MultiLinesChart multiLinesChart = new MultiLinesChart(files.get(0));
-                multiLinesChart.setVisible(true);
-                multiLinesChart.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
-            });
+            if (args.length == 0) {
+                files.forEach(file -> {
+                    MultiLinesChart multiLinesChart = new MultiLinesChart(file);
+                    multiLinesChart.saveChartAsPNG();
+                });
+            } else {
+                SwingUtilities.invokeLater(() -> {
+                    MultiLinesChart multiLinesChart = new MultiLinesChart(files.getFirst());
+                    multiLinesChart.setVisible(true);
+                    multiLinesChart.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
+                });
+            }
         }
     }
 }
